# MaidSafe-Common

./: .common_flags.cmake.swp  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  README  README.md  common_flags.cmake
cmake/: maidsafe_AddGtests.cmake  maidsafe_FindBoost.cmake  maidsafe_FindCryptopp.cmake  maidsafe_FindGlog.cmake  maidsafe_FindGmock.cmake  maidsafe_FindGtest.cmake  maidsafe_FindProtobuf.cmake  maidsafe_FindQt4.cmake
cmake_modules/: ContinuousAllProjects.cmake  maidsafe_add_gtests.cmake  maidsafe_clone.cmake  maidsafe_dashboard.cmake  maidsafe_find_cbfs.cmake  maidsafe_find_mysql.cmake  maidsafe_find_mysqlpp.cmake  maidsafe_find_openmp.cmake  maidsafe_find_qt4.cmake  maidsafe_initialise_common.cmake  maidsafe_install_version.cmake  maidsafe_run_protoc.cmake  maidsafe_standard_completion.cmake  maidsafe_standard_flags.cmake  maidsafe_standard_setup.cmake  maidsafe_utils.cmake
docs/: sqlite_wrapper.md  structured_data_versions_update.md  tuning_SQLite.md
include/: system_error
include/clang31_workaround/: system_error
include/maidsafe/common/: active.h  allocators .h  allocators.h  application_support_directories.h  asio_service.h  bloom_filter.h  bounded_string.h  cli.h  clock.h  compile_time_mapper.h  config.h  convert.h  crypto.h  data_buffer.h  data_units.h  encode.h  error.h  error_categories.h  hash.h  identity.h  ipc.h  key_value_buffer.h  log.h  make_unique.h  menu.h  menu_item.h  menu_level.h  node_id.h  on_scope_exit.h  process.h  profiler.h  return_codes.h  rsa.h  safe_queue.h  serialisation.h  sqlite3_wrapper.h  tagged_value.h  test.h  type_check.h  type_macros.h  (+4 more)
include/maidsafe/common/authentication/: user_credential_utils.h  user_credentials.h
include/maidsafe/common/cereal/: cerealize_helpers.h  maidsafe_error.h  safe_encrypt.h
include/maidsafe/common/containers/: lru_cache.h
include/maidsafe/common/data_stores/: data_buffer.h  data_store.h  local_store.h  memory_buffer.h  permanent_store.h
include/maidsafe/common/data_types/: data.h  data_name_variant.h  data_type_macros.h  data_type_values.h  immutable_data.h  mutable_data.h  structured_data_versions.h
include/maidsafe/common/detail/: menu_item.h  menu_level.h
include/maidsafe/common/hash/: hash_algorithms.h  hash_array.h  hash_contiguous.h  hash_data_range.h  hash_forward_list.h  hash_initializer_list.h  hash_iterator_range.h  hash_list.h  hash_map.h  hash_numeric.h  hash_pair.h  hash_range.h  hash_set.h  hash_string.h  hash_string_ref.h  hash_tuple.h  hash_use_serialize.h  hash_vector.h  hash_wrappers.h
include/maidsafe/common/serialisation/: binary_archive.h  compile_time_mapper.h  serialisation.h
include/maidsafe/common/tcp/: connection.h  listener.h
include/maidsafe/common/tools/: network_viewer.h  sqlite3_wrapper_benchmark.h
include/maidsafe/common/transport/: tcp_connection.h  tcp_listener.h
maidsafe_common_lib/: CMakeLists.txt  CTestConfig.cmake
maidsafe_common_lib/src/maidsafe/common/: alternative_store.h  asio_service.cc  asio_service.h  asymmetric_crypto.h  breakpad.cc  breakpad.h  buffered_chunk_store.cc  buffered_chunk_store.h  call_later_timer.cc  call_later_timer.h  chunk_action_authority.cc  chunk_action_authority.h  chunk_store.h  chunk_store_disk.cc  chunk_store_disk.h  chunk_validation.h  crypto.cc  crypto.h  crypto_key_pairs.cc  crypto_key_pairs.h  file_chunk_store.cc  file_chunk_store.h  hashable_chunk_validation.h  log.cc  log.h  memory_chunk_store.cc  memory_chunk_store.h  omp.h  platform_config.h  return_codes.h  rsa.cc  rsa.h  safe_enc.proto  safe_encrypt_pb.h  securifier.cc  securifier.h  stub_chunk_action_authority.cc  stub_chunk_action_authority.h  test.h  threadpool.cc  (+6 more)
maidsafe_common_lib/src/maidsafe/common/tests/: buffered_chunk_store_test.cc  chunk_store_api_test.h  crypto_key_pairs_test.cc  crypto_test.cc  file_chunk_store_test.cc  hashable_chunk_validation_test.cc  main.cc  memory_chunk_store_test.cc  rsa_test.cc  securifier_test.cc  test_call_later_timer.cc  test_chunk_store_api.h  test_crypto.cc  test_detect_platform.cc  test_file_chunk_store.cc  test_memory_chunk_store.cc  test_threadpool.cc  test_threadsafe_chunk_store.cc  test_utils.cc  testc++0x.cc  testcalllater.cc  testcrypto.cc  testthreadpool.cc  testutils.cc  threadsafe_chunk_store_test.cc  utils_test.cc
maidsafe_common_lib/src/maidsafe/common/tests/boost/: test_smart_ptr.cc
src/maidsafe/common/: active.cc  asio_service.cc  bloom_filter.cc  breakpad.h  breakpad.xx  cli.cc  clock.cc  config.cc  crypto.cc  data_buffer.cc  encode.cc  error.cc  error.proto  error_categories.cc  error_categories.h  identity.cc  identity_common_bits_matrix.h  ipc.cc  key_value_buffer.cc  log.cc  menu.cc  menu_item.cc  node_id.cc  omp.h  process.cc  profiler.cc  rsa.cc  safe_encrypt.proto  safe_encrypt_cereal.h  sqlite3_wrapper.cc  stores.proto  test.cc  throw_error.cc  throw_error.h  utils.cc  visualiser_log.cc
src/maidsafe/common/authentication/: user_credential_utils.cc
src/maidsafe/common/data_stores/: data_buffer.cc  local_store.cc  memory_buffer.cc  permanent_store.cc  utils.cc  utils.h
src/maidsafe/common/data_types/: data.cc  immutable_data.cc  mutable_data.cc  mutable_types.proto  structured_data_versions.cc  structured_data_versions.proto  structured_data_versions_cereal.h  version_cereal.h
src/maidsafe/common/tcp/: connection.cc  listener.cc
src/maidsafe/common/tests/: asio_service_test.cc  bloom_filter_test.cc  bounded_string_test.cc  main.cc  (+26 more)
third_party_libs/: CMakeLists.txt
third_party_libs/src/cryptopp/: CMakeLists.txt  wait.cpp
third_party_libs/src/glog/src/: logging.cc  utilities.cc  utilities.h
third_party_libs/src/glog/src/glog/: logging.h.in
third_party_libs/src/glog/vsprojects/libglog_static/: libglog_static.vcxproj
third_party_libs/src/google-breakpad/: CMakeLists.txt
third_party_libs/src/googlemock/: CMakeLists.txt
third_party_libs/src/googlemock/gtest/cmake/: internal_utils.cmake
third_party_libs/src/protobuf/vsprojects/: libprotobuf.vcxproj  libprotoc.vcxproj  protoc.vcxproj
tools/: cpplint.py  run_cpplint.bat
(+66 files in other folders)
